Fixed some methods and tests